--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ target/
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
-dhat-heap.json
 
 # Added by cargo
 
@@ -22,6 +21,9 @@ data/inputs/*
 !data/inputs/.keep
 data/puzzles/*
 !data/puzzles/.keep
+
+# Dhat
+dhat-heap.json
 
 # Benchmarks
 
