fix: update launch.json config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,34 +2,43 @@
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
+    "version": "2.0.0",
+    // idk why ${input:solution} does not work, it should.
+    "inputs": [
+        {
+            "id": "solution",
+            "description": "Enter the solution you want to debug (e.g. '01')",
+            "type": "promptString"
+        }
+    ],
     "configurations": [
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in executable 'advent_of_code'",
+            "name": "Debug unit tests for a solution",
             "cargo": {
-                "args": ["test", "--no-run", "--bin=advent_of_code", "--package=advent_of_code"],
-                "filter": {
-                    "name": "advent_of_code",
-                    "kind": "bin"
-                }
+                "args": [
+                    "test",
+                    "--no-run",
+                    // change this to the solution you want to debug.
+                    "--bin=01",
+                    "--package=advent_of_code"
+                ],
             },
-            "args": [],
             "cwd": "${workspaceFolder}"
         },
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug executable 'advent_of_code'",
+            "name": "Debug executable for a solution",
             "cargo": {
-                "args": ["build", "--bin=advent_of_code", "--package=advent_of_code"],
-                "filter": {
-                    "name": "advent_of_code",
-                    "kind": "bin"
-                }
+                "args": [
+                    "build",
+                    // change this to the solution you want to debug.
+                    "--bin=01",
+                    "--package=advent_of_code"
+                ],
             },
-            "args": ["1"],
             "cwd": "${workspaceFolder}"
         },
         {
@@ -37,13 +46,18 @@
             "request": "launch",
             "name": "Debug unit tests in library 'advent_of_code'",
             "cargo": {
-                "args": ["test", "--no-run", "--lib", "--package=advent_of_code"],
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--lib",
+                    "--features=test_lib",
+                    "--package=advent_of_code"
+                ],
                 "filter": {
                     "name": "advent_of_code",
                     "kind": "lib"
                 }
             },
-            "args": [],
             "cwd": "${workspaceFolder}"
         }
     ]
