--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ test_lib = []
 [dependencies]
 chrono = { version = "0.4.31", optional = true }
 dhat = { version = "0.3.2", optional = true }
-itertools = "0.12.0"
 pico-args = "0.5.0"
-hashbrown = "0.11.2"
 tinyjson = "2"
+hashbrown = "0.14.3"
+itertools = "0.12.0"
+once_cell = "1.19.0"
