--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,13 @@ today = ["chrono"]
 test_lib = []
 
 [dependencies]
+
+# Template dependencies
 chrono = { version = "0.4.31", optional = true }
 dhat = { version = "0.3.2", optional = true }
 pico-args = "0.5.0"
 tinyjson = "2"
+
 hashbrown = "0.14.3"
 itertools = "0.12.0"
 once_cell = "1.19.0"
