--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,15 +2,7 @@
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "2.0.0",
-    // idk why ${input:solution} does not work, it should.
-    "inputs": [
-        {
-            "id": "solution",
-            "description": "Enter the solution you want to debug (e.g. '01')",
-            "type": "promptString"
-        }
-    ],
+    "version": "0.2.0",
     "configurations": [
         {
             "type": "lldb",
@@ -20,21 +12,22 @@
                 "args": [
                     "test",
                     "--no-run",
-                    // change this to the solution you want to debug.
+                    // replace `01` here with the solution you like to debug.
                     "--bin=01",
                     "--package=advent_of_code"
                 ],
             },
+            "args": [],
             "cwd": "${workspaceFolder}"
         },
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug executable for a solution",
+            "name": "Debug a solution",
             "cargo": {
                 "args": [
                     "build",
-                    // change this to the solution you want to debug.
+                    // replace `01` here with the solution you like to debug.
                     "--bin=01",
                     "--package=advent_of_code"
                 ],
@@ -58,6 +51,7 @@
                     "kind": "lib"
                 }
             },
+            "args": [],
             "cwd": "${workspaceFolder}"
         }
     ]
