fix: identify S for day 10, make matrix generic

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,12 +1,12 @@
 [alias]
-today = "run --quiet --release --features today -- today"
-scaffold = "run --quiet --release -- scaffold"
-download = "run --quiet --release -- download"
-read = "run --quiet --release -- read"
+today = "run  --release --features today -- today"
+scaffold = "run  --release -- scaffold"
+download = "run  --release -- download"
+read = "run  --release -- read"
 
-solve = "run --quiet --release -- solve"
-all = "run --quiet --release -- all"
-time = "run --quiet --release -- time"
+solve = "run  --release -- solve"
+all = "run  --release -- all"
+time = "run  --release -- time"
 
 [env]
 AOC_YEAR = "2023"
