--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ dhat = { version = "0.3.2", optional = true }
 pico-args = "0.5.0"
 tinyjson = "2"
 
+# Solution dependencies
 hashbrown = "0.14.3"
 itertools = "0.12.0"
 once_cell = "1.19.0"
